fix up second page with eye and sign in button overflow

--- a/Java Web Application/RepetitaIuvant/src/main/resources/css/webPageStyleSheet.css
+++ b/Java Web Application/RepetitaIuvant/src/main/resources/css/webPageStyleSheet.css
@@ -156,11 +156,6 @@ header {
     border-width: 0.3em;
 }
 
-.btn:focus {
-    outline: none;
-    box-shadow: none;
-}
-
 .greyHoverSelection:hover {
     background-color: darkgray;
 }
